--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <title>Todos & Goals</title>
 </head>
 <body>
+
+    <div>
+        <h1>Todo List</h1>
+        <input id='todo' type='text' placeholder='Add your Todo'/>
+        <button id='todoBtn'>Add Todo</button>
+        <ul id='todos'></ul>
+    </div>
+    <div>
+        <h1>Goals</h1>
+        <input id='goal' type='text' placeholder='Add your Goal'/>
+        <button id='goalBtn'>Add Goal</button>
+        <ul id='goals'></ul>
+    </div>
+
+
     <script type='text/javascript'>
         //Library code
         function createStore (reducer) {
