--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
 
     <script type='text/javascript'>
+        //helper function
+        function generateId () {
+            return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
+        }
+
+
         //Library code
         function createStore (reducer) {
             // The store should have four parts
@@ -138,53 +144,76 @@
             console.log('the new state is: ', store.getState());
         });
 
-        // store.dispatch({
-        //     type: ADD_TODO,
-        //     todo: {
-        //         id: 0,
-        //         name: 'Learn Redux',
-        //         complete: false,
-        //     }
-
-        // });
-
         store.subscribe(() => {
             console.log('The new state is: ', store.getState())
         })
         
-        store.dispatch(addTodoAction({
-            id: 0,
-            name: 'Walk the dog',
-            complete: false,
-        }));
+        // store.dispatch(addTodoAction({
+        //     id: 0,
+        //     name: 'Walk the dog',
+        //     complete: false,
+        // }));
 
-        store.dispatch(addTodoAction({
-            id: 1,
-            name: 'Wash the car',
-            complete: false,
-        }));
+        // store.dispatch(addTodoAction({
+        //     id: 1,
+        //     name: 'Wash the car',
+        //     complete: false,
+        // }));
 
-        store.dispatch(addTodoAction({
-            id: 2,
-            name: 'Go to the gym',
-            complete: true,
-        }));
+        // store.dispatch(addTodoAction({
+        //     id: 2,
+        //     name: 'Go to the gym',
+        //     complete: true,
+        // }));
 
-        store.dispatch(removeTodoAction(1));
+        // store.dispatch(removeTodoAction(1));
 
-        store.dispatch(toggleTodoAction(0));
+        // store.dispatch(toggleTodoAction(0));
 
-        store.dispatch(addGoalAction({
-            id: 0,
-            name: 'Learn Redux'
-        }));
+        // store.dispatch(addGoalAction({
+        //     id: 0,
+        //     name: 'Learn Redux'
+        // }));
 
-        store.dispatch(addGoalAction({
-        id: 1,
-        name: 'Lose 20 pounds'
-        }));
+        // store.dispatch(addGoalAction({
+        // id: 1,
+        // name: 'Lose 20 pounds'
+        // }));
 
-        store.dispatch(removeGoalAction(0));
+        // store.dispatch(removeGoalAction(0));
+
+        //taking value from input field and connecting with redux state
+        function addTodo () {
+            const input = document.getElementById('todo');
+            const name = input.value;
+            input.value = '';
+
+            store.dispatch(addTodoAction({
+                id: generateId(),
+                name,
+                complete: false,
+            }));
+        }
+
+        function addGoal () {
+            const input = document.getElementById('goal');
+            const name = input.value;
+            input.value = '';
+
+            store.dispatch(addGoalAction({
+                id: generateId(),
+                name,
+                complete: false,
+            }));
+
+        }
+
+        //hooking up button with addTodo / addGoal
+        document.getElementById('todoBtn')
+            .addEventListener('click', addTodo);
+        
+            document.getElementById('goalBtn')
+            .addEventListener('click', addGoal);
     </script>
 </body>
 </html>
