implement toggle todo feature

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             }
         }
 
-        function toggleTodoAction () {
+        function toggleTodoAction (id) {
             return {
                 type: TOGGLE_TODO,
-                id: 0,
+                id,
             }
         }
 
@@ -227,6 +227,13 @@
             const text = document.createTextNode(todo.name);
             node.appendChild(text);
 
+            //toggle feature
+            node.style.textDecoration = todo.complete ? 'line-through' : 'none';
+            node.addEventListener('click', ()=> {
+                store.dispatch(toggleTodoAction(todo.id));
+            });
+            //toggle feature
+
             document.getElementById('todos')
                 .appendChild(node);
         }
@@ -235,7 +242,6 @@
             const node = document.createElement('li');
             const text = document.createTextNode(goal.name);
             node.appendChild(text);
-
             document.getElementById('goals')
                 .appendChild(node);
         }
