create remove todo/goal functionality

--- a/index.html
+++ b/index.html
@@ -222,11 +222,24 @@
             document.getElementById('goalBtn')
             .addEventListener('click', addGoal);
 
+        //helper function for creating a button
+        function createRemoveButton (onClick) {
+            const removeBtn = document.createElement('button');
+            removeBtn.innerHTML = 'X';
+            removeBtn.addEventListener('click', onClick);
+            return removeBtn;
+        }    
+
         function addTodoToDOM(todo) {
             const node = document.createElement('li');
             const text = document.createTextNode(todo.name);
-            node.appendChild(text);
 
+            const removeBtn = createRemoveButton(()=> {
+                store.dispatch(removeTodoAction(todo.id));
+            });
+
+            node.appendChild(text);
+            node.appendChild(removeBtn);
             //toggle feature
             node.style.textDecoration = todo.complete ? 'line-through' : 'none';
             node.addEventListener('click', ()=> {
@@ -241,7 +254,13 @@
         function addGoalToDOM(goal) {
             const node = document.createElement('li');
             const text = document.createTextNode(goal.name);
+
+            const removeBtn = createRemoveButton(()=>{
+                store.dispatch(removeGoalAction(goal.id));
+            });
+
             node.appendChild(text);
+            node.appendChild(removeBtn);
             document.getElementById('goals')
                 .appendChild(node);
         }
