--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
             }
         }
 
+        function checkAndDispatch (store, action) {
+            if (action.type === ADD_TODO && 
+                action.todo.name.toLowerCase().includes('bitcoin')) {
+                return alert('Nope, that\'s a bad idea!');
+            }
+
+            if (action.type === ADD_GOAL && 
+                action.goal.name.toLowerCase().includes('bitcoin')) {
+                return alert('Nope, that\'s a bad idea!');
+            }
+
+            return store.dispatch(action);
+
+        }
+
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals,
@@ -123,7 +138,7 @@
             const name = input.value;
             input.value = '';
 
-            store.dispatch(addTodoAction({
+            checkAndDispatch(store ,addTodoAction({
                 id: generateId(),
                 name,
                 complete: false,
@@ -135,7 +150,7 @@
             const name = input.value;
             input.value = '';
 
-            store.dispatch(addGoalAction({
+            checkAndDispatch(store ,addGoalAction({
                 id: generateId(),
                 name,
                 complete: false,
@@ -163,7 +178,7 @@
             const text = document.createTextNode(todo.name);
 
             const removeBtn = createRemoveButton(()=> {
-                store.dispatch(removeTodoAction(todo.id));
+                checkAndDispatch(store ,removeTodoAction(todo.id));
             });
 
             node.appendChild(text);
@@ -171,7 +186,7 @@
             //toggle feature
             node.style.textDecoration = todo.complete ? 'line-through' : 'none';
             node.addEventListener('click', ()=> {
-                store.dispatch(toggleTodoAction(todo.id));
+                checkAndDispatch(store ,toggleTodoAction(todo.id));
             });
             //toggle feature
 
@@ -184,7 +199,7 @@
             const text = document.createTextNode(goal.name);
 
             const removeBtn = createRemoveButton(()=>{
-                store.dispatch(removeGoalAction(goal.id));
+                checkAndDispatch(store ,removeGoalAction(goal.id));
             });
 
             node.appendChild(text);
