--- a/index.html
+++ b/index.html
@@ -99,25 +99,37 @@
             }
         }
 
-        function checkAndDispatch (store, action) {
+        // function checkAndDispatch (store, action) {
+        //     if (action.type === ADD_TODO && 
+        //         action.todo.name.toLowerCase().includes('bitcoin')) {
+        //         return alert('Nope, that\'s a bad idea!');
+        //     }
+
+        //     if (action.type === ADD_GOAL && 
+        //         action.goal.name.toLowerCase().includes('bitcoin')) {
+        //         return alert('Nope, that\'s a bad idea!');
+        //     }
+
+        //     return store.dispatch(action);
+
+        // }
+            
+        const checker = (store) => (next) => (action) => {
             if (action.type === ADD_TODO && 
                 action.todo.name.toLowerCase().includes('bitcoin')) {
                 return alert('Nope, that\'s a bad idea!');
             }
-
             if (action.type === ADD_GOAL && 
                 action.goal.name.toLowerCase().includes('bitcoin')) {
                 return alert('Nope, that\'s a bad idea!');
             }
-
-            return store.dispatch(action);
-
+            return next(action);
         }
 
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals,
-        }));
+        }), Redux.applyMiddleware(checker));
         
         store.subscribe(()=>{
             console.log('the new state is: ', store.getState());
@@ -138,7 +150,7 @@
             const name = input.value;
             input.value = '';
 
-            checkAndDispatch(store ,addTodoAction({
+            store.dispatch(addTodoAction({
                 id: generateId(),
                 name,
                 complete: false,
@@ -150,7 +162,7 @@
             const name = input.value;
             input.value = '';
 
-            checkAndDispatch(store ,addGoalAction({
+            store.dispatch(addGoalAction({
                 id: generateId(),
                 name,
                 complete: false,
@@ -178,7 +190,7 @@
             const text = document.createTextNode(todo.name);
 
             const removeBtn = createRemoveButton(()=> {
-                checkAndDispatch(store ,removeTodoAction(todo.id));
+                store.dispatch(removeTodoAction(todo.id));
             });
 
             node.appendChild(text);
@@ -186,7 +198,7 @@
             //toggle feature
             node.style.textDecoration = todo.complete ? 'line-through' : 'none';
             node.addEventListener('click', ()=> {
-                checkAndDispatch(store ,toggleTodoAction(todo.id));
+                store.dispatch(toggleTodoAction(todo.id));
             });
             //toggle feature
 
@@ -199,7 +211,7 @@
             const text = document.createTextNode(goal.name);
 
             const removeBtn = createRemoveButton(()=>{
-                checkAndDispatch(store ,removeGoalAction(goal.id));
+                store.dispatch(removeGoalAction(goal.id));
             });
 
             node.appendChild(text);
