implement logger middleware

--- a/index.html
+++ b/index.html
@@ -126,13 +126,22 @@
             return next(action);
         }
 
+        const logger = (store) => (next) => (action) => {
+            console.group(action.type);
+                console.log('The action: ', action)
+                const result = next(action);
+                console.log('The new state is: ', store.getState());
+            console.groupEnd();
+            return result;
+        }
+
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals,
-        }), Redux.applyMiddleware(checker));
+        }), Redux.applyMiddleware(checker, logger));
         
         store.subscribe(()=>{
-            console.log('the new state is: ', store.getState());
+            // console.log('the new state is: ', store.getState());
             const {todos, goals} = store.getState();
 
             document.getElementById('todos').innerHTML = '';
