--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Todos & Goals</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
-</head>
+    <script src='https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js'></script>
+    <script src='https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js'></script>
+    <script src='https://unpkg.com/babel-standalone@6.15.0/babel.min.js'></script></head>
 <body>
 
     <div>
@@ -18,6 +20,9 @@
         <button id='goalBtn'>Add Goal</button>
         <ul id='goals'></ul>
     </div>
+
+    <hr/>
+    <div id='root'></div>
 
 
     <script type='text/javascript'>
@@ -228,7 +233,57 @@
             document.getElementById('goals')
                 .appendChild(node);
         }
-            
+    </script>
+    
+    <script type="text/babel">
+
+        function  List (props) {
+            return (
+                <ul>
+                    <li>LIST</li>
+                </ul>
+            );
+        }
+
+        class Todos extends React.Component {
+            render() {
+                return (
+                    <div>
+                        TODOS
+                        <List />
+                    </div>
+                )
+            }
+        }
+
+        class Goals extends React.Component {
+            render() {
+                return (
+                    <div>
+                        GOALS
+                        <List />
+                    </div>
+                )
+            }
+        }
+
+
+        class App extends React.Component {
+            render() {
+                return (
+                    <div>
+                        <h3>React Todos & Goals</h3>
+                        <Todos />
+                        <Goals />
+                    </div>
+                )
+            }
+        }
+
+        ReactDOM.render(
+            <App />,
+            document.getElementById('root') 
+        );
     </script>
 </body>
 </html>
