--- a/index.html
+++ b/index.html
@@ -307,12 +307,20 @@
 
 
         class App extends React.Component {
+            componentDidMount(){
+                const {store} = this.props;
+
+                store.subscribe(()=>this.forceUpdate());
+            }
             render() {
+                const {store} = this.props;
+                const {goals, todos} = store.getState();
+
                 return (
                     <div>
                         <h3>React Todos & Goals</h3>
-                        <Todos store={this.props.store}/>
-                        <Goals store={this.props.store}/>
+                        <Todos todos={todos} store={store}/>
+                        <Goals goals={goals} store={store}/>
                     </div>
                 )
             }
