--- a/index.html
+++ b/index.html
@@ -238,9 +238,19 @@
     <script type="text/babel">
 
         function  List (props) {
+            const {items} = props;
             return (
                 <ul>
-                    <li>LIST</li>
+                    {items.map((item)=>(
+                        <li key={item.id}>
+                            <span>
+                                {item.name}
+                            </span>
+                            <button onClick={() => props.remove(item)}>
+                                X
+                            </button>
+                        </li>
+                    ))}
                 </ul>
             );
         }
@@ -258,8 +268,12 @@
                     name,
                     complete: false,
                 }));
-
             }
+
+            removeItem = (todo) => {
+                this.props.store.dispatch(removeTodoAction(todo.id));
+            }
+
             render() {
                 return (
                     <div>
@@ -270,7 +284,7 @@
                             ref={(input)=> this.input = input}
                             />
                         <button onClick={this.addItem}>Add Todo</button>
-                        <List />
+                        <List remove={this.removeItem} items={this.props.todos}/>
                     </div>
                 )
             }
@@ -289,6 +303,11 @@
                     complete: false,
                 }));
             }
+
+            removeItem = (goal) => {
+                this.props.store.dispatch(removeGoalAction(goal.id));
+            }
+
             render() {
                 return (
                     <div>
@@ -299,7 +318,7 @@
                             ref={(input) => this.input = input}/>
                         <button onClick={this.addItem}>Add Goal</button>
             
-                        <List />
+                        <List remove={this.removeItem} items={this.props.goals}/>
                     </div>
                 )
             }
