Toggling UI with React

--- a/index.html
+++ b/index.html
@@ -238,15 +238,18 @@
     <script type="text/babel">
 
         function  List (props) {
-            const {items} = props;
+            const {items, remove, toggle} = props;
             return (
                 <ul>
                     {items.map((item)=>(
                         <li key={item.id}>
-                            <span>
-                                {item.name}
+                            <span
+                                onClick={()=> toggle && toggle(item.id)}
+                                style={{textDecoration: item.complete? 'line-through' : 'none'}}
+                                >
+                                    {item.name}
                             </span>
-                            <button onClick={() => props.remove(item)}>
+                            <button onClick={() => remove(item)}>
                                 X
                             </button>
                         </li>
@@ -274,6 +277,10 @@
                 this.props.store.dispatch(removeTodoAction(todo.id));
             }
 
+            toggleItem = (id) => {
+                this.props.store.dispatch(toggleTodoAction(id));
+            }
+
             render() {
                 return (
                     <div>
@@ -284,7 +291,11 @@
                             ref={(input)=> this.input = input}
                             />
                         <button onClick={this.addItem}>Add Todo</button>
-                        <List remove={this.removeItem} items={this.props.todos}/>
+                        <List 
+                            toggle={this.toggleItem}
+                            remove={this.removeItem} 
+                            items={this.props.todos}
+                            />
                     </div>
                 )
             }
