--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
             }
         }
 
+        // loading reducer
+        function loading(state = true, action) {
+            switch (action.type) {
+                case RECEIVE_DATA:
+                    return false;
+                default:
+                    return state;
+            }
+        } 
+
         // function checkAndDispatch (store, action) {
         //     if (action.type === ADD_TODO && 
         //         action.todo.name.toLowerCase().includes('bitcoin')) {
@@ -156,6 +166,7 @@
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals,
+            loading,
         }), Redux.applyMiddleware(checker, logger));
         
         store.subscribe(()=>{
@@ -366,7 +377,13 @@
             }
             render() {
                 const {store} = this.props;
-                const {goals, todos} = store.getState();
+                const {goals, todos, loading} = store.getState();
+
+                if (loading) {
+                    return (
+                        <h3>Loading...</h3>
+                    )
+                }
 
                 return (
                     <div>
