--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
             }
         }
 
+        function handleDeleteTodo(todo) {
+            return (dispatch) => {
+                dispatch(removeTodoAction(todo.id));
+                return API.deleteTodo(todo.id)
+                    .catch(() => {
+                        dispatch(addTodoAction(todo));
+                        alert('An Error occured, please try again.')
+                    });
+            }
+        }
+
         // todos reducer 
         function todos (state = [], action) {
             switch (action.type) {
@@ -134,11 +145,19 @@
             return result;
         }
 
+        //middleware
+        //const thunk = (store) => (next) => (action) => {
+        //    if (typeof action === 'function') {
+        //        return action(store.dispatch);
+        //    }
+        //    return next(action);
+        //}
+
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals,
             loading,
-        }), Redux.applyMiddleware(checker, logger));
+        }), Redux.applyMiddleware(ReduxThunk.default, checker, logger));
         
     </script>
     
@@ -181,12 +200,7 @@
             }
 
             removeItem = (todo) => {
-                this.props.store.dispatch(removeTodoAction(todo.id));
-                return API.deleteTodo(todo.id)
-                    .catch(() => {
-                        this.props.store.dispatch(addTodoAction(todo));
-                        alert('An Error occured, please try again.')
-                    });
+                this.props.store.dispatch(handleDeleteTodo(todo));
             }
 
             toggleItem = (id) => {
