--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
             }
         }
 
+        function handleAddGoal(name, callB) {
+            return (dispatch) => {
+                return API.saveGoal(name)
+                    .then((goal) => {
+                        dispatch(addGoalAction(goal));
+                        callB();
+                    })
+                    .catch(()=>{
+                        alert('Something went wrong, please try again.')
+                    })
+            }
+        }
+
+        function handleDeleteGoal(goal) {
+            return (dispatch) => {
+                dispatch(removeGoalAction(goal.id));
+                return API.deleteGoal(goal.id)
+                    .catch(() => {
+                        dispatch(addGoalAction(goal));
+                        alert('An Error occured, please try again.')
+                    });
+            }
+        }
+
+
         // todos reducer 
         function todos (state = [], action) {
             switch (action.type) {
@@ -235,26 +260,14 @@
         class Goals extends React.Component {
             addItem = (e) => {
                 e.preventDefault();
-                const {store} = this.props;
-
-                return API.saveGoal(this.input.value)
-                    .then((goal)=>{
-                        store.dispatch(addGoalAction(goal));
-                        this.input.value = '';
-                    })
-                    .catch(()=>{
-                        alert('Something went wrong, please try again.')
-                    })
+                this.props.store.dispatch(handleAddGoal(
+                    this.input.value,
+                    () => this.input.value = ''
+                ));
             }
 
             removeItem = (goal) => {
-                
-                this.props.store.dispatch(removeGoalAction(goal.id))
-                return API.deleteGoal(goal.id)
-                    .catch(()=>{
-                        this.props.store.dispatch(addGoalAction(goal));
-                        alert('An Error occured, please try again.')
-                    });
+                this.props.store.dispatch(handleDeleteGoal(goal));
             }
 
             render() {
