--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 ]).then(([todos, goals])=> {
                     // console.log('todos: ', todos);
                     // console.log('goals: ', goals);
-                    dispatch(receiveDataAction(todos, goals));
+                    store.dispatch(receiveDataAction(todos, goals));
                 });
             }
         }
@@ -246,21 +246,34 @@
             );
         }
 
+        class ConnectedTodos extends React.Component {
+            render() {
+                return (
+                    <Context.Consumer>
+                        {(store) => {
+                            const {todos} = store.getState();
+                            return <Todos todos={todos} dispatch={store.dispatch} />
+                        }}
+                    </Context.Consumer>
+                )
+            }
+        }
+
         class Todos extends React.Component {
             addItem = (e) => {
                 e.preventDefault();
-                this.props.store.dispatch(handleAddTodo(
+                this.props.dispatch(handleAddTodo(
                     this.input.value,
                     () => this.input.value = ''
                 ));
             }
 
             removeItem = (todo) => {
-                this.props.store.dispatch(handleDeleteTodo(todo));
+                this.props.dispatch(handleDeleteTodo(todo));
             }
 
             toggleItem = (id) => {
-                this.props.store.dispatch(handleToggle(id));
+                this.props.dispatch(handleToggle(id));
             }
 
             render() {
@@ -283,17 +296,30 @@
             }
         }
 
+        class ConnectedGoals extends React.Component {
+            render(){
+                return(
+                    <Context.Consumer>
+                        {(store) => {
+                            const {goals} = store.getState();
+                            return <Goals goals={goals} dispatch={store.dispatch} />
+                        }}
+                    </Context.Consumer>
+                )
+            }
+        }
+
         class Goals extends React.Component {
             addItem = (e) => {
                 e.preventDefault();
-                this.props.store.dispatch(handleAddGoal(
+                this.props.dispatch(handleAddGoal(
                     this.input.value,
                     () => this.input.value = ''
                 ));
             }
 
             removeItem = (goal) => {
-                this.props.store.dispatch(handleDeleteGoal(goal));
+                this.props.dispatch(handleDeleteGoal(goal));
             }
 
             render() {
@@ -323,7 +349,7 @@
             }
             render() {
                 const {store} = this.props;
-                const {goals, todos, loading} = store.getState();
+                const {loading} = store.getState();
 
                 if (loading) {
                     return (
@@ -334,15 +360,41 @@
                 return (
                     <div>
                         <h3>React Todos & Goals</h3>
-                        <Todos todos={todos} store={store}/>
-                        <Goals goals={goals} store={store}/>
+                        <ConnectedTodos />
+                        <ConnectedGoals />
                     </div>
                 )
             }
         }
 
+        class ConnectedApp extends React.Component {
+            render(){
+                return(
+                    <Context.Consumer>
+                        {(store) => (
+                            <App store={store}/>
+                        )}
+                    </Context.Consumer>
+                )
+            }
+        }
+
+        const Context = React.createContext();
+
+        class Provider extends React.Component {
+            render(){
+                return (
+                    <Context.Provider value={this.props.store}>
+                        {this.props.children}
+                    </Context.Provider>
+                )
+            }
+        }
+
         ReactDOM.render(
-            <App store={store}/>,
+            <Provider store={store}>
+                <ConnectedApp />
+            </Provider>,
             document.getElementById('root') 
         );
     </script>
